# bestcat

./: .gitignore  Arch.md  Makefile  README.md  project.godot
common/: dark-tower.png.import  heart.png.import  icon.svg.import  projectile.a.png.import  projetile.png.import
common/projectile/: explosion.png.import  projectile.tres
common/world/: world.tres
docs/: preview1.png.import  preview2.png.import
entities/bestcat/: Meow-Knight_Attack_1.png.import  Meow-Knight_Attack_2.png.import  Meow-Knight_Attack_3.png.import  Meow-Knight_Attack_4.png.import  Meow-Knight_Death.png.import  Meow-Knight_Dodge.png.import  Meow-Knight_Idle.png.import  Meow-Knight_Jump.png.import  Meow-Knight_Run.png.import  Meow-Knight_Take_Damage.png.import  Meow_Knight.json  best_cat.gd  best_cat.tscn
entities/enemies/: enemies.explosion.png.import  enemy.gd
entities/enemy-projectile/: enemy-projectile.tscn  enemy_projectile.gd
entities/game/: game.gd  game.tscn  story_manager.gd
entities/hud/: heart.png.import  hud.gd  hud.tscn  projectiles-cnt.png.import
entities/level/: level.gd  level.tscn
entities/levels/: level.gd
entities/missions/: mission.gd
entities/pause-menu/: pause-menu.tscn
entities/player-projectile/: player-projectile.tscn  player_projectile.gd
entities/players/: player.gd
entities/projectile/: explosion.png.import  idle.png.import  projectile.gd  projectile.tscn
entities/story/: story.gd  story.tscn
game/: difficulty_value.gd
scripts/: build-macos.sh  build-web.sh  local-serve-web.sh
server/: main.py  pyproject.toml
src/game/: project.godot  (+1 more)
(+286 files in other folders)
